{
  "version": 4,
  "terraform_version": "1.15.7",
  "serial": 18,
  "lineage": "315f7c15-5c85-09d7-d9ca-9c2654a299e3",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "red_por_defecto",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381352981117:vpc/vpc-069a41ef3675a8daa",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-03329df369110ccff",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-09f87f36202d0d72b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-069a41ef3675a8daa",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00f32d8809128bb32",
            "owner_id": "381352981117",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mis_servidores",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c7217cdde317cfec",
            "arn": "arn:aws:ec2:us-east-1:381352981117:instance/i-0f5513772884bca42",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f5513772884bca42",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "llave-app-tareas",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-08d416694a56cc536"
              }
            ],
            "primary_network_interface_id": "eni-08d416694a56cc536",
            "private_dns": "ip-172-31-42-160.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.42.160",
            "public_dns": "ec2-23-20-250-59.compute-1.amazonaws.com",
            "public_ip": "23.20.250.59",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07465b0aebb0692e5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "app-tareas-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00f711fffbe747210",
            "tags": {
              "Name": "Servidor-App-Tareas-1"
            },
            "tags_all": {
              "Name": "Servidor-App-Tareas-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0eb3da8efd26ae36a"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "381352981117",
            "id": "i-0f5513772884bca42",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.llave_aws",
            "aws_security_group.muro_seguridad",
            "tls_private_key.llave_ssh"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c7217cdde317cfec",
            "arn": "arn:aws:ec2:us-east-1:381352981117:instance/i-021ad2b3cb2636754",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-021ad2b3cb2636754",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "llave-app-tareas",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-09baa0b0e3999c1cf"
              }
            ],
            "primary_network_interface_id": "eni-09baa0b0e3999c1cf",
            "private_dns": "ip-172-31-39-0.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.39.0",
            "public_dns": "ec2-54-172-91-40.compute-1.amazonaws.com",
            "public_ip": "54.172.91.40",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00a619002ac0b29b5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "app-tareas-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00f711fffbe747210",
            "tags": {
              "Name": "Servidor-App-Tareas-2"
            },
            "tags_all": {
              "Name": "Servidor-App-Tareas-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0eb3da8efd26ae36a"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "381352981117",
            "id": "i-021ad2b3cb2636754",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.llave_aws",
            "aws_security_group.muro_seguridad",
            "tls_private_key.llave_ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "recepcionista",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:381352981117:loadbalancer/app/app-tareas-alb/f6c96e4c1aedeeb2",
            "arn_suffix": "app/app-tareas-alb/f6c96e4c1aedeeb2",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "app-tareas-alb-1264363029.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:381352981117:loadbalancer/app/app-tareas-alb/f6c96e4c1aedeeb2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app-tareas-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0eb3da8efd26ae36a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00f711fffbe747210"
              },
              {
                "subnet_id": "subnet-03ef1978cb09fb875"
              }
            ],
            "subnets": [
              "subnet-00f711fffbe747210",
              "subnet-03ef1978cb09fb875"
            ],
            "vpc_id": "vpc-069a41ef3675a8daa",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:381352981117:loadbalancer/app/app-tareas-alb/f6c96e4c1aedeeb2"
          },
          "dependencies": [
            "aws_security_group.muro_seguridad",
            "data.aws_subnets.subredes_por_defecto",
            "data.aws_vpc.red_por_defecto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "oyente_puerta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:381352981117:listener/app/app-tareas-alb/f6c96e4c1aedeeb2/84f15230234b1ee2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:381352981117:targetgroup/app-tareas-tg/2a3dca0ca47c6ae5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:381352981117:listener/app/app-tareas-alb/f6c96e4c1aedeeb2/84f15230234b1ee2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:381352981117:loadbalancer/app/app-tareas-alb/f6c96e4c1aedeeb2",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:381352981117:listener/app/app-tareas-alb/f6c96e4c1aedeeb2/84f15230234b1ee2"
          },
          "dependencies": [
            "aws_lb.recepcionista",
            "aws_lb_target_group.grupo_servidores",
            "aws_security_group.muro_seguridad",
            "data.aws_subnets.subredes_por_defecto",
            "data.aws_vpc.red_por_defecto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "grupo_servidores",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:381352981117:targetgroup/app-tareas-tg/2a3dca0ca47c6ae5",
            "arn_suffix": "targetgroup/app-tareas-tg/2a3dca0ca47c6ae5",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:381352981117:targetgroup/app-tareas-tg/2a3dca0ca47c6ae5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "app-tareas-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-069a41ef3675a8daa"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:381352981117:targetgroup/app-tareas-tg/2a3dca0ca47c6ae5"
          },
          "dependencies": [
            "data.aws_vpc.red_por_defecto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "enganchar_servidores",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:381352981117:targetgroup/app-tareas-tg/2a3dca0ca47c6ae5,i-0f5513772884bca42,80",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:381352981117:targetgroup/app-tareas-tg/2a3dca0ca47c6ae5",
            "target_id": "i-0f5513772884bca42"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "381352981117",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:381352981117:targetgroup/app-tareas-tg/2a3dca0ca47c6ae5",
            "target_id": "i-0f5513772884bca42"
          },
          "dependencies": [
            "aws_instance.mis_servidores",
            "aws_key_pair.llave_aws",
            "aws_lb_target_group.grupo_servidores",
            "aws_security_group.muro_seguridad",
            "data.aws_vpc.red_por_defecto",
            "tls_private_key.llave_ssh"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:381352981117:targetgroup/app-tareas-tg/2a3dca0ca47c6ae5,i-021ad2b3cb2636754,80",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:381352981117:targetgroup/app-tareas-tg/2a3dca0ca47c6ae5",
            "target_id": "i-021ad2b3cb2636754"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "381352981117",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:381352981117:targetgroup/app-tareas-tg/2a3dca0ca47c6ae5",
            "target_id": "i-021ad2b3cb2636754"
          },
          "dependencies": [
            "aws_instance.mis_servidores",
            "aws_key_pair.llave_aws",
            "aws_lb_target_group.grupo_servidores",
            "aws_security_group.muro_seguridad",
            "data.aws_vpc.red_por_defecto",
            "tls_private_key.llave_ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "muro_seguridad",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381352981117:security-group/sg-0eb3da8efd26ae36a",
            "description": "Permitir entrar a la web y a configurar",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eb3da8efd26ae36a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "app-tareas-sg",
            "name_prefix": "",
            "owner_id": "381352981117",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-069a41ef3675a8daa"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "381352981117",
            "id": "sg-0eb3da8efd26ae36a",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}